crates/app/src/commands/init/snapshots/moon_app__commands__init__tests__renders_bitbucket.snap
---
source: crates/app/src/commands/init/mod.rs
expression: render_workspace_template(&context).unwrap()
---
# https://moonrepo.dev/docs/config/workspace
$schema: './cache/schemas/workspace.json'

# extends: './shared/workspace.yml'

projects:
  - 'apps/*'
  - 'packages/*'
vcs:
  client: 'git'
  provider: 'bitbucket'
  defaultBranch: 'main'
