crates/app/src/commands/init/snapshots/moon_app__commands__init__tests__renders_gitlab.snap
---
source: crates/app/src/commands/init/mod.rs
expression: render_workspace_template(&context).unwrap()
---
# https://moonrepo.dev/docs/config/workspace
$schema: './cache/schemas/workspace.json'

# Require a specific version of moon while running commands, otherwise fail.
# versionConstraint: '>=1.0.0'

# Extend and inherit an external configuration file. Must be a valid HTTPS URL or file system path.
# extends: './shared/workspace.yml'

# REQUIRED: A map of all projects found within the workspace, or a list or file system globs.
# When using a map, each entry requires a unique project ID as the map key, and a file system
# path to the project folder as the map value. File paths are relative from the workspace root,
# and cannot reference projects located outside the workspace boundary.
projects:
  - 'apps/*'
  - 'packages/*'

# Configures the version control system to utilize within the workspace. A VCS
# is required for determining touched (added, modified, etc) files, calculating file hashes,
# computing affected files, and much more.
vcs:
  # The client to use when managing the repository.
  # Accepts "git". Defaults to "git".
  manager: 'git'

  # The provider in which the repository is hosted on.
  provider: 'gitlab'

  # The default branch (master/main/trunk) in the repository for comparing the
  # local branch against. For git, this is is typically "master" or "main",
  # and must include the remote prefix (before /).
  defaultBranch: 'main'
